# kge-pharmacoVigilante

./: .gitignore  README.md  pyproject.toml
.dvc/: config
data/: graph.dvc  processed.dvc  raw.dvc  triples.tsv
models/: learned_kge.dvc  learned_kge_se.dvc  rotate.dvc  umls.dvc  xgboost.dvc
notebooks/: eda.ipynb
reports/: hpo_results_summary.json  label_cleaning.txt  ranking_analysis.json  ranking_comparison.json  xgboost_hyperparams.json
src/: config.py  hpo.py  kge_training.py  run.py
src/data/: labels.py  make_dataset.py  patterns.py
src/graph/: build_graph.py  embeddings.py  hpo.py  make_dataset.py  patterns.py
src/modeling/: baseline.py  kge.py  xgboost_cv.py
src/modeling/util/: data_loader.py  evaluation.py  kge_scorer.py
