[project]
name = "ml-pykeen-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pykeen>=1.11.1",
    "torch==2.7.0+cu118",
    "torchaudio==2.7.0+cu118",
    "torchvision==0.22.0+cu118",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
torchaudio = [{ index = "pytorch-cu118" }]
torchvision = [{ index = "pytorch-cu118" }]
