[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlflow>=2.15.0",
    "nmslib>=2.1.2",
    "pandas>=2.0.0,<3",
    "pykeen>=1.11.1",
    "scikit-learn>=1.3.0",
    "ruff>=0.15.0",
    "scispacy>=0.6.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "torch==2.7.0+cu118",
    "torchaudio==2.7.0+cu118",
    "torchvision==0.22.0+cu118",
    "xgboost>=3.2.0",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
torchaudio = [{ index = "pytorch-cu118" }]
torchvision = [{ index = "pytorch-cu118" }]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
extend-select = ["E", "F", "I", "UP", "B", "SIM"]  # Import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true
